pesbuk-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pesbuk
  namespace: pesbuk
spec:
  replicas: 1
  selector:
    matchLabels:
      name: pesbuk
      metadata: pesbuk
  template:
    metadata:
      labels:
        name: pesbuk
        metadata: pesbuk
    spec:
      containers:
      - name: pesbuk
        image: hegiwibowo/pesbuk-with-secret:1.1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pesbuk
  namespace: pesbuk
spec:
  #type: LoadBalancer
  ports:
    - port: 80
      #nodePort: 30080
  selector:
    name: pesbuk
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pesbuk-ingress
  namespace: pesbuk
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: pesbuk.hegiwibowo.xyz
    http:
      paths:
      #- path: /belajar
      - backend:
          serviceName: pesbuk
          servicePort: 80
